# SKN30-3rd-4Team-dev

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.agents/skills/commit/: SKILL.md
.agents/skills/pr/: SKILL.md
.claude/commands/: commit.md  pr.md  skn-merge.md  skn-remote.md  start.md
.github/workflows/: discord-pr-notification.yml  sync-to-org.yml
.streamlit/: secrets.toml.example
app/: app.py  backend.py  main.py  ui.py
app/pages/: landing.py  post.py  pre.py
data/: README.md  raw_expected_qa.json
data/01_raw/: expc.jsonl  tilnote_2026년 전세 사기 예방 등기부등본 확인법 완벽 가이드_원본.md
data/02_loaded/: 2021_[한국부동산원]_주택·상가건물_임대차분쟁조정사례집.md  2021_[한국부동산원]_주택·상가건물_임대차분쟁조정사례집_DEMO_6-13.md  2022_개정_주택임대차_표준계약서(개정전).md
docs/: git-convention.md
eval/: build_raw_qa_dataset.py  run_graph_test2_accuracy.py
notebooks/: 01_load_api.ipynb  02_load_pdf.ipynb  02_load_pdf_final.ipynb  03_build_kb_chunks.ipynb  04_chunking.ipynb  05_length.ipynb  06_md_chunk.ipynb  07_new.ipynb  PyMuPDF4LLM.ipynb  PyMuPDFDirectoryLoader.ipynb  PyPDFloader.ipynb  README.md  chunking.ipynb  length.ipynb  long_chunks_report.txt  table_result.html  test_ragas.ipynb  test_search_scores.ipynb
scripts/: README.md  setting_cmd.bat  setting_mac.sh  streamlit_run_cmd.bat  streamlit_run_mac.sh
src/: README.md
src/adapter/: ocr_get_text.py
src/core/: graph.py  graph_test2.py  vs_method.py
src/pipe/: check_ingest.py  embed_chunks.py  ingest_supabase.py  load_pdf.py
test/: pdf_extract.py  test_db.py  test_layout.py  test_vs.py
(+130 files in other folders)
