[project]
name = "jeonse-factchecker"
version = "0.1.0"
description = "전·월세 분쟁 팩트체커 — 계약 전 위험 분석부터 계약 후 분쟁 대응까지 돕는 챗봇"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "langsmith",
    "openai",
    "pypdf",
    "chromadb",
    "tiktoken",
    "python-dotenv",
    "pydantic-settings",
    "pymupdf>=1.28.0",
    "pymupdf4llm>=1.28.0",
    "rapidocr-onnxruntime>=1.4.4",
    "pillow>=12.2.0",
    "pdfplumber>=0.11.10",
    "rapidocr>=3.9.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "tesseract>=0.1.3",
    "psycopg[binary]>=3.3.4",
    "pandas>=3.0.4",
    "dotenv>=0.9.9",
    "future>=1.0.0",
    "load>=1.0.14",
    "state>=0.1.1.dev0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py313"
